Enable handling of Android intents including extra array